# formula-e-fan-concierge

./: ARCHITECTURE_BRIEF.md  DAILY_STARTUP.md  HOW_IT_WORKS.md  KNOWN_FIXES.md  PLAN.md  README.md  STUDENT_GUIDE.md  activate.sh  demo.sh  pyproject.toml
deploy/: RUNBOOK_commentator.md  RUNBOOK_race_data_subagent.md  build_engine_app.py  deploy_agent_engine.sh  deploy_frontend.sh  deploy_race_data_subagent.sh  deploy_state_writer.sh  enable_apis.sh
frontend/: Dockerfile  commentator_loop.py  engineer_loop.py  main.py  track_map_outline.ipynb
frontend/static/: index.html  track_outline.json
notebooks/: track_map_outline.ipynb
scripts/: local_commentator.py  local_test.py  seed_test_state.py  test_frame_tools.py  verify_commentator_offline.py  verify_subagent_local.py
setup/: 5_deploy_state_writer.sh  7_deploy_subagent.sh  8_deploy_cloud.sh  all.sh  verify.sh  verify_checks.py
shared/: agent_pkg.py  scorer.py
simulator/: README.md
solution/commentator/: README.md  __init__.py  agent.py  config.py  prompts.py  snapshot.py
solution/cx_concierge/: AGENT_PLAYBOOK.md  BUILD_CONCIERGE.md  DATASTORE_SETUP.md  README.md
solution/race_data_subagent/: CX_SETUP.md  Dockerfile  KNOWN_FIXES.md  README.md  __init__.py  agent.py  app.py  cloudbuild.yaml  config.py  mcp_server.py  openapi_ask_race_data.yaml  prompts.py  requirements.txt
spec/: architecture.md  architecture_svg_plan.md  cx_integration_spike.md  frame_tools_scorer_reaim.md  handoff_to_planning.md  state_writer_worker_pool.md
state_writer/: main.py  worker.py  writer_core.py
(+74 files in other folders)
